select nicer images for blog post articles on carousel

--- a/index.html
+++ b/index.html
@@ -164,7 +164,9 @@
               href="https://medium.com/@harry.wilson1995a/javascript-rails-project-using-classes-to-create-highly-organized-code-3b7b66d462f4"
               target="_blank"
               class="image featured"
-              ><img src="./images/computer.jpg" alt="Computer with code"
+              ><img
+                src="./images/rsz_1rsz_organized.jpg"
+                alt="Organized daily planner"
             /></a>
             <header>
               <h3>
@@ -207,7 +209,7 @@
               href="https://medium.com/@harry.wilson1995a/my-approach-to-learning-new-languages-frameworks-25f64b8a862d"
               target="_blank"
               class="image featured"
-              ><img src="./images/code1.jpg" alt="Code"
+              ><img src="./images/rsz_2learning.jpg" alt="Learning materials"
             /></a>
             <header>
               <h3>
@@ -229,7 +231,7 @@
               href="https://medium.com/@harry.wilson1995a/ruby-on-rails-project-using-scope-methods-to-narrow-my-database-queries-may-2020-a874e6019312"
               class="image featured"
               target="_blank"
-              ><img src="./images/rsz_code2.jpg" alt="Code"
+              ><img src="./images/rsz_filter.jpg" alt="Coffee filter"
             /></a>
             <header>
               <h3>
@@ -251,7 +253,9 @@
               href="https://medium.com/@harry.wilson1995a/my-sinatra-project-pushing-for-stretch-goals-while-combining-frameworks-march-2020-c6be96b8a695"
               target="_blank"
               class="image featured"
-              ><img src="./images/rsz_code3.jpg" alt="Code"
+              ><img
+                src="./images/push-yourself.jpg"
+                alt="Man pushing himself in a workout"
             /></a>
             <header>
               <h3>
