add page for new bug tracker app, need to fill out details for page

--- a/index.html
+++ b/index.html
@@ -89,14 +89,19 @@
           <div class="row">
             <article class="col-4 col-12-mobile special">
               <header>
-                <h3><a href="#">Final Project Here</a></h3>
+                <h3><a href="./bug-tracker.html">Bug Tracker</a></h3>
                 <br />
-                <a href="#" class="image featured"
-                  ><img src="images/lingorater.PNG" alt=""
+                <a href="./bug-tracker.html" class="image featured"
+                  ><img
+                    src="images/bug-tracker-3.PNG"
+                    alt="Bug Tracker app screenshot"
                 /></a>
               </header>
               <p>
-                Description of final project here
+                Full MERN Stack Application written in modern React on the
+                frontend with Hooks and Context. Designed to allow
+                employees/developers to keep track of the current tasks/bugs
+                they are working on. Authentication using JSON Web Tokens.
               </p>
             </article>
             <article class="col-4 col-12-mobile special">
@@ -106,7 +111,9 @@
                 </h3>
                 <br />
                 <a href="./sequence-lite.html" class="image featured"
-                  ><img src="images/sequence.PNG" alt=""
+                  ><img
+                    src="images/sequence.PNG"
+                    alt="SequenceLite app screenshot"
                 /></a>
               </header>
               <p>
@@ -121,7 +128,9 @@
                 <h3><a href="./lingorater.html">LingoRater</a></h3>
                 <br />
                 <a href="./lingorater.html" class="image featured"
-                  ><img src="images/lingorater.PNG" alt=""
+                  ><img
+                    src="images/lingorater.PNG"
+                    alt="LingoRater app screenshot"
                 /></a>
               </header>
               <p>
