small style change to homepage portfolio project section

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     alt="Bug Tracker app screenshot"
                 /></a>
               </header>
-              <p>
+              <p style="margin-top: 5.5rem">
                 Full MERN Stack Application written in modern React on the
                 frontend with Hooks and Context. Designed to allow
                 employees/developers to keep track of the current tasks/bugs
