some changes made to bug tracker show page

--- a/bug-tracker.html
+++ b/bug-tracker.html
@@ -28,21 +28,16 @@
           <ul>
             <li><a class="scrolly" href="index.html">Home</a></li>
             <li>
-              <a
-                class="scrolly"
-                href="https://youtu.be/Xh0qd6lqNcs"
-                target="_blank"
-                >Demo</a
-              >
+              <a class="scrolly" href="#" target="_blank">Demo</a>
             </li>
             <li>
-              <a href="https://sequence-lite.netlify.app/" target="_blank"
+              <a href="https://bug-tracker-pro.herokuapp.com/" target="_blank"
                 >Hosted Site</a
               >
             </li>
             <li>
               <a
-                href="https://github.com/HarryWilson1995/JS-Card-Game-Sequence-SPA-"
+                href="https://github.com/HarryWilson1995/Bug-Tracker-MERN"
                 target="_blank"
                 >Github</a
               >
@@ -61,7 +56,7 @@
           <article id="main" class="special">
             <header>
               <h2>
-                Full Stack MERN Application with Authentication - SequenceLite
+                Full Stack MERN Application with Authentication - Bug Tracker
               </h2>
               <p>
                 Check out this short Youtube video below which demonstrates how
@@ -82,14 +77,14 @@
               <li>
                 Github Repo:
                 <a
-                  href="https://github.com/HarryWilson1995/JS-Card-Game-Sequence-SPA-"
+                  href="https://github.com/HarryWilson1995/Bug-Tracker-MERN"
                   target="_blank"
                   >Here</a
                 >
               </li>
               <li>
                 Hosted Site
-                <a href="https://sequence-lite.netlify.app/" target="_blank"
+                <a href="https://bug-tracker-pro.herokuapp.com/" target="_blank"
                   >Here</a
                 >
               </li>
