build out show page for bug tracker site and include youtube link to video demo

--- a/bug-tracker.html
+++ b/bug-tracker.html
@@ -67,7 +67,7 @@
               <iframe
                 width="560"
                 height="315"
-                src="https://www.youtube.com/embed/Xh0qd6lqNcs"
+                src="https://youtu.be/fh0B3c216Bw"
                 frameborder="0"
                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen
@@ -90,29 +90,24 @@
               </li>
             </ul>
             <p>
-              This multiplayer single page card game application will provide
-              hours of competitive fun. The goal of the game is to place
-              consecutive runs of 3 cards of the same suit or place three cards
-              which have the same number value. Once you have no cards left in
-              your hand, you score a point and the game restarts, keeping track
-              of your scores if you wish to continue or giving you the option to
-              start a new game with different players. The rules can be found at
-              any point during the game by clicking the rules button in the top
-              right corner of the page which will open up a modal
+              Full MERN Stack Application written in modern React on the
+              frontend with Hooks and Context. Designed to allow
+              employees/developers to keep track of the current tasks/bugs they
+              are working on. Authentication using JSON Web Tokens.
             </p>
             <section>
               <header>
                 <h3>Technology Used:</h3>
               </header>
               <p>
-                <strong>Frontend -</strong> HTML, CSS, Vanilla JavaScript, ES6
-                Classes, Object Oriented Programming, Sortable.js, Sortable.js
-                MultiDrag Plugin
+                <strong>Frontend -</strong> HTML, CSS, Modern React with Hooks
+                and Context, Axios, Private route components, Localstorage, JSON
+                Web Token Authentication
               </p>
               <p>
-                <strong>Backend -</strong> Ruby on Rails API, ActiveRecord,
-                SQLite (development), Postgresql (in production), SQL,
-                ApplicationRecord, Ruby, multiple Ruby gems.
+                <strong>Backend -</strong> Node.js, Express.js, MongoDB,
+                Mongoose, BCrypt.js, JSON Web Tokens, tested using Postman,
+                Express Validator.
               </p>
             </section>
             <section>
@@ -120,12 +115,12 @@
                 <h3>Future Plans:</h3>
               </header>
               <p>
-                In the future I plan on using web sockets to create a
-                multiplayer game that is not a single page application. I also
-                wish to add additional rules including the ability to buy cards,
-                add to other players sequences from your own hand and much more.
-                I plan on making this next version of the application with the
-                MERN Stack and socket.io.
+                In the future I plan on building out an admin feature of the
+                site which will allow team leaders to check up on all the tasks
+                their team members are working on. Following on from this I
+                would like to implement a notification system so that anyone
+                working on a bug will receive an email when a task is
+                edited/updated/deleted.
               </p>
             </section>
           </article>
