add embedded youtube video to bug tracker page and update demo links on two project pages

--- a/bug-tracker.html
+++ b/bug-tracker.html
@@ -28,7 +28,12 @@
           <ul>
             <li><a class="scrolly" href="index.html">Home</a></li>
             <li>
-              <a class="scrolly" href="#" target="_blank">Demo</a>
+              <a
+                class="scrolly"
+                href="https://youtu.be/fh0B3c216Bw"
+                target="_blank"
+                >Demo</a
+              >
             </li>
             <li>
               <a href="https://bug-tracker-pro.herokuapp.com/" target="_blank"
@@ -67,7 +72,7 @@
               <iframe
                 width="560"
                 height="315"
-                src="https://youtu.be/fh0B3c216Bw"
+                src="https://www.youtube.com/embed/fh0B3c216Bw"
                 frameborder="0"
                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen
