--- a/lingorater.html
+++ b/lingorater.html
@@ -30,7 +30,7 @@
             <li>
               <a
                 class="scrolly"
-                href="https://www.youtube.com/watch?v=OVSiBobBu4w"
+                href="https://youtu.be/OVSiBobBu4w"
                 target="_blank"
                 >Demo</a
               >
