add details about responsiveness of bug tracker project

--- a/bug-tracker.html
+++ b/bug-tracker.html
@@ -61,7 +61,8 @@
           <article id="main" class="special">
             <header>
               <h2>
-                Full Stack MERN Application with Authentication - Bug Tracker
+                Fully Responsive Full Stack MERN Application with Authentication
+                - Bug Tracker
               </h2>
               <p>
                 Check out this short Youtube video below which demonstrates how
@@ -107,7 +108,7 @@
               <p>
                 <strong>Frontend -</strong> HTML, CSS, Modern React with Hooks
                 and Context, Axios, Private route components, Localstorage, JSON
-                Web Token Authentication
+                Web Token Authentication, Fully Responsive Design.
               </p>
               <p>
                 <strong>Backend -</strong> Node.js, Express.js, MongoDB,
