--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
                 /></a>
               </header>
               <p style="margin-top: 5.5rem">
-                Full MERN Stack Application written in modern React on the
-                frontend with Hooks and Context. Designed to allow
+                Fully Responsive Full MERN Stack Application written in modern
+                React on the frontend with Hooks and Context. Designed to allow
                 employees/developers to keep track of the current tasks/bugs
                 they are working on. Authentication using JSON Web Tokens.
               </p>
